--- a/conf/mongo_rsa.conf
+++ b/conf/mongo_rsa.conf
@@ -1,4 +1,4 @@
-dbpath = /data/db/ArticleRecommend/RS_A
+dbpath = /data/db/ArticalRecommend/RS_A
 port = 27017 # 端口
 bind_ip = 127.0.0.1 # 服务地址
-replSet = ArticleRecommend/127.0.0.1:27018 # 设定同伴 child为集群名称
+replSet = ArticalRecommend/127.0.0.1:27018 # 设定同伴 child为集群名称
