--- a/conf/mongo_rsb.conf
+++ b/conf/mongo_rsb.conf
@@ -1,4 +1,4 @@
-dbpath = /data/db/ArticleRecommend/RS_B
+dbpath = /data/db/ArticalRecommend/RS_B
 port = 27018 # 端口
 bind_ip = 127.0.0.1 # 服务地址
-replSet = ArticleRecommend/127.0.0.1:27019 # 设定同伴 child为集群名称
+replSet = ArticalRecommend/127.0.0.1:27019 # 设定同伴 child为集群名称
